--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@vueuse/core": "^9.13.0",
     "@vueuse/head": "^1.1.23",
     "pinia": "^2.0.32",
     "vue": "^3.2.47",
