--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "jsdom": "^21.1.0",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.21",
+    "postcss-import": "^15.1.0",
     "prettier": "^2.8.4",
     "start-server-and-test": "^2.0.0",
     "tailwindcss": "^3.2.7",
