--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.21",
     "postcss-import": "^15.1.0",
+    "postcss-nesting": "^11.2.1",
     "prettier": "^2.8.4",
     "start-server-and-test": "^2.0.0",
     "tailwindcss": "^3.2.7",
