--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "cypress": "^12.7.0",
     "eslint": "^8.34.0",
     "eslint-plugin-cypress": "^2.12.1",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-vue": "^9.9.0",
     "jsdom": "^21.1.0",
     "npm-run-all": "^4.1.5",
